fix spacing wierdness

--- a/app/src/scss/components/projects/_project-listing.scss
+++ b/app/src/scss/components/projects/_project-listing.scss
@@ -65,7 +65,7 @@
       padding-left: 0;
     }
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       padding-top: $spacer * 5;
       padding-right: $spacer * 5;
       padding-bottom: $spacer * 5;
@@ -82,6 +82,10 @@
     color: rgba($brand-dark, 0.7);
     font-size: 88%;
     transform: translate3d(0, 0, 0);
+
+    p {
+      margin-bottom: 0;
+    }
   }
 
   &__detailed {
